Fix mobile language/theme switching and notifications
- Fixed language switching on mobile devices - now properly redirects through Django i18n
- Fixed theme change notifications display on mobile
- Removed blue outline on language/theme buttons for mobile (added outline:none and -webkit-tap-highlight-color)
- Fixed active language button state detection (support for lang codes like 'ru-RU')
- Updated mobile-menu.js to integrate with global LanguageManager and ThemeManager
- Improved notification display with proper language detection

--- a/src/locale/en/LC_MESSAGES/django.po
+++ b/src/locale/en/LC_MESSAGES/django.po
@@ -8343,3 +8343,15 @@ msgstr "Invalid confirmation. Enter 'DELETE' to confirm."
 #: students/views.py:667
 msgid "Неверный пароль. Удаление отменено."
 msgstr "Invalid password. Deletion cancelled."
+
+#: core/templates/base.html
+msgid "Тема изменена на"
+msgstr "Theme changed to"
+
+#: core/templates/base.html
+msgid "Светлая"
+msgstr "Light"
+
+#: core/templates/base.html
+msgid "Темная"
+msgstr "Dark"
