--- a/src/locale/ka/LC_MESSAGES/django.po
+++ b/src/locale/ka/LC_MESSAGES/django.po
@@ -8437,3 +8437,144 @@ msgstr "ღია"
 msgid "Темная"
 msgstr "მუქი"
 
+# New translations for Terms of Service and Platform Rules
+msgid "3. Рассылки и уведомления"
+msgstr "3. გაზეთები და შეტყობინებები"
+
+msgid "Подтверждение email:"
+msgstr "ელ.ფოსტის დადასტურება:"
+
+msgid "После регистрации на ваш email будет отправлено письмо с ссылкой для подтверждения. Для полноценного использования платформы необходимо подтвердить адрес электронной почты."
+msgstr "რეგისტრაციის შემდეგ თქვენს ელ.ფოსტაზე გამოიგზავნება წერილი დადასტურების ბმულით. პლატფორმის სრულად გამოსაყენებლად აუცილებელია ელ.ფოსტის მისამართის დადასტურება."
+
+msgid "При регистрации на платформе PyLand вы автоматически подписываетесь на следующие типы рассылок:"
+msgstr "PyLand პლატფორმაზე რეგისტრაციისას თქვენ ავტომატურად გამოიწერეთ შემდეგი ტიპის გაზეთები:"
+
+msgid "Типы уведомлений:"
+msgstr "შეტყობინებების ტიპები:"
+
+msgid "Обновления курсов:"
+msgstr "კურსის განახლებები:"
+
+msgid "Информация о новых уроках и материалах"
+msgstr "ინფორმაცია ახალი გაკვეთილების და მასალების შესახებ"
+
+msgid "Напоминания о заданиях:"
+msgstr "დავალებების შეხსენება:"
+
+msgid "Уведомления о предстоящих дедлайнах"
+msgstr "შეტყობინებები მომავალი ვადების შესახებ"
+
+msgid "Достижения и прогресс:"
+msgstr "მიღწევები და პროგრესი:"
+
+msgid "Сообщения о ваших успехах и полученных сертификатах"
+msgstr "შეტყობინებები თქვენი წარმატებებისა და მიღებული სერტიფიკატების შესახებ"
+
+msgid "Новости платформы:"
+msgstr "პლატფორმის სიახლეები:"
+
+msgid "Информация о новых функциях и возможностях"
+msgstr "ინფორმაცია ახალი ფუნქციებისა და შესაძლებლობების შესახებ"
+
+msgid "Еженедельная сводка:"
+msgstr "კვირეული მიმოხილვა:"
+
+msgid "Обзор вашего прогресса за неделю"
+msgstr "თქვენი პროგრესის მიმოხილვა კვირის განმავლობაში"
+
+msgid "Управление подписками:"
+msgstr "გამოწერების მართვა:"
+
+msgid "Вы можете в любой момент отключить или настроить рассылки в разделе настроек вашего личного дашборда. Перейдите в 'Настройки' → 'Уведомления' для управления предпочтениями."
+msgstr "შეგიძლიათ ნებისმიერ დროს გამორთოთ ან დააკონფიგურიროთ გაზეთები თქვენი პირადი დაშბორდის პარამეტრების განყოფილებაში. გადით 'პარამეტრები' → 'შეტყობინებები' პრეფერენციების მართვისთვის."
+
+msgid "Обязательные уведомления:"
+msgstr "სავალდებულო შეტყობინებები:"
+
+msgid "Некоторые уведомления являются обязательными и не могут быть отключены:"
+msgstr "ზოგიერთი შეტყობინება სავალდებულოა და არ შეიძლება გამორთვა:"
+
+# Platform Rules translations
+msgid "После регистрации вам будет отправлено письмо с ссылкой для подтверждения адреса электронной почты. Для использования всех функций платформы необходимо подтвердить email."
+msgstr "რეგისტრაციის შემდეგ გამოგეგზავნებათ წერილი ელ.ფოსტის მისამართის დადასტურების ბმულით. პლატფორმის ყველა ფუნქციის გამოსაყენებლად აუცილებელია ელ.ფოსტის დადასტურება."
+
+msgid "Рассылки и уведомления:"
+msgstr "გაზეთები და შეტყობინებები:"
+
+msgid "При регистрации вы автоматически подписываетесь на следующие типы уведомлений:"
+msgstr "რეგისტრაციისას თქვენ ავტომატურად გამოიწერეთ შემდეგი ტიპის შეტყობინებები:"
+
+msgid "Обновления курсов и новые материалы"
+msgstr "კურსის განახლებები და ახალი მასალები"
+
+msgid "Напоминания о заданиях и дедлайнах"
+msgstr "დავალებებისა და ვადების შეხსენება"
+
+msgid "Уведомления о достижениях и прогрессе"
+msgstr "შეტყობინებები მიღწევებისა და პროგრესის შესახებ"
+
+msgid "Новости и обновления платформы"
+msgstr "პლატფორმის სიახლეები და განახლებები"
+
+msgid "Еженедельная сводка активности"
+msgstr "კვირეული აქტივობის მიმოხილვა"
+
+msgid "Вы можете отключить или настроить любые рассылки в настройках вашего дашборда (раздел 'Уведомления'). Некоторые уведомления (подтверждение email, восстановление пароля, платежи) являются обязательными и не могут быть отключены."
+msgstr "შეგიძლიათ გამორთოთ ან დააკონფიგურიროთ ნებისმიერი გაზეთი თქვენი დაშბორდის პარამეტრებში ('შეტყობინებები' განყოფილება). ზოგიერთი შეტყობინება (ელ.ფოსტის დადასტურება, პაროლის აღდგენა, გადახდები) სავალდებულოა და არ შეიძლება გამორთვა."
+
+# Email verification template translations
+msgid "О рассылках"
+msgstr "გაზეთების შესახებ"
+
+msgid "При регистрации вы автоматически подписались на все наши рассылки:"
+msgstr "რეგისტრაციისას თქვენ ავტომატურად გამოიწერეთ ჩვენი ყველა გაზეთი:"
+
+msgid "Вы можете отключить или настроить любые рассылки в настройках вашего дашборда (раздел 'Уведомления')."
+msgstr "შეგიძლიათ გამორთოთ ან დააკონფიგურიროთ ნებისმიერი გაზეთი თქვენი დაშბორდის პარამეტრებში ('შეტყობინებები' განყოფილება)."
+
+# Newsletter welcome email translations
+msgid "Спасибо за подписку на блог PyLand!"
+msgstr "გმადლობთ PyLand ბლოგზე გამოწერისთვის!"
+
+msgid "Теперь ты будешь первым узнавать о:"
+msgstr "ახლა თქვენ პირველი იცოდეთ შესახებ:"
+
+msgid "Новых статьях и уроках"
+msgstr "ახალი სტატიები და გაკვეთილები"
+
+msgid "про Python, Django и веб-разработку"
+msgstr "Python, Django და ვებ-გაგრძელების შესახებ"
+
+msgid "Советах и трюках"
+msgstr "რჩევები და ხრიკები"
+
+msgid "от опытных разработчиков"
+msgstr "გამოცდილი დეველოპერებისგან"
+
+msgid "Специальных предложениях"
+msgstr "სპეციალური შემოთავაზებები"
+
+msgid "эксклюзивно для подписчиков"
+msgstr "ექსკლუზიურად გამომწერებისთვის"
+
+msgid "Новых курсах"
+msgstr "ახალი კურსები"
+
+msgid "раньше всех"
+msgstr "ყველაზე ადრე"
+
+msgid "Совет от команды:"
+msgstr "გუნდის რჩევა:"
+
+msgid "Добавь наш email в адресную книгу, чтобы письма не попадали в спам!"
+msgstr "დაამატეთ ჩვენი ელ.ფოსტა მისამართების წიგნში, რომ წერილები სპამში არ მოხვდეს!"
+
+msgid "Мы рады видеть тебя в нашем сообществе!"
+msgstr "ჩვენ გვიხარია, რომ ხართ ჩვენს საზოგადოებაში!"
+
+msgid "Не хочешь больше получать письма?"
+msgstr "აღარ გსურთ წერილების მიღება?"
+
+msgid "Отписаться"
+msgstr "გამოწერის გაუქმება"
